--- a/css/home.css
+++ b/css/home.css
@@ -38,13 +38,23 @@ body {
   left: 0;
   z-index: 10;
 }
-.mid-nav > form {
+
+.search-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.search-container > form {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   height: 100%;
+  margin-top: 10px;
 }
+
 #search-btn-nav {
   height: 35px;
   width: 35px;
@@ -64,8 +74,17 @@ body {
   border-bottom: 1px solid rgb(113, 48, 156);
   color: white;
   padding-left: 5px;
+
 }
 
+.search-result-box {
+  position: absolute;
+  width: 450px;
+  background-color: #170f23;  
+  top: 60px;
+}
+
+/* ----------------------------------- */
 .mid-banner {
   width: 100%;
   height: 300px;
@@ -142,6 +161,7 @@ body {
   bottom: 0;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
   border-top: 1px solid rgb(61, 61, 61);
 }
@@ -163,8 +183,8 @@ body {
 }
 
 .play-btn {
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 40px;
 }
 
 #play-music-info {
@@ -177,6 +197,7 @@ body {
   padding: 0 5px 0 5px;
   color: var(--text-color);
   z-index: 4;
+  left: 0;
 }
 
 #play-music-info > img {
@@ -207,17 +228,17 @@ body {
 }
 
 .play-zone-btn-box {
-  display: flex;
+  display: flex;  
+  width: calc(77% - 300px);
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 100%;
   padding: 0 0 5px 0;
   z-index: 4;
 }
 
 #range-duration {
-  width: 30%;
+  width: 50%;
   margin: 0 10px 0 10px;
 }
 
@@ -611,12 +632,10 @@ input[type="range"]::-webkit-slider-thumb {
   width: 100%;
   border: 1px solid white;
   margin: 15px 10px 0 0;
-  border-radius: 10px;
-  background-color: #66467c;
+  background-color: #170f23;
 }
 .user-nav-box > div > p {
   padding: 10px;
-  border-radius: 10px;
   font-weight: bold;
 }
 .user-nav-box > div > p:hover {
