--- a/css/admin.css
+++ b/css/admin.css
@@ -13,8 +13,12 @@ body {
 }
 
 h2 {
-    width: 100%;
-    text-align: center;
+  width: 100%;
+  text-align: center;
+}
+
+.no-margin {
+  margin: 0 !important;
 }
 
 .admin-page-nav {
@@ -23,7 +27,7 @@ h2 {
   left: 0;
   width: 100%;
   height: 60px;
-  border: 1px solid #858585;
+  border-bottom: 1px solid #858585;
   background-color: white;
   z-index: 10;
 }
@@ -44,6 +48,7 @@ h2 {
   align-items: center;
   border: 1px solid rgb(119, 119, 119);
   padding: 20px 50px 0 50px;
+  border-radius: 10px;
 }
 
 input {
@@ -67,15 +72,31 @@ form {
 /* ------------------------------------------ */
 .user-display {
   width: 70%;
-  border: 1px solid rgb(112, 112, 112);
+  margin: 100px 0 100px 0;
 }
+
+.user-display > form {
+  width: 700px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+#search-user-input { 
+  padding-left: 10px;
+}
+
+#search-user-input {
+  margin-right: 10px;
+}
+
 
 table {
   width: 100%;
 }
 
 td {
-    padding: 10px;
+  padding: 10px;
 }
 
 .user-table-td,
@@ -103,8 +124,13 @@ td {
   margin-right: 10%;
 }
 .user-option-btn {
-  padding: 5px 10px 5px 10px;
+  padding: 10px;
   margin-right: 10px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  color: white;
+  font-weight: bold;
 }
 
 .update-input {
@@ -117,8 +143,68 @@ td {
   border: 1px solid rgb(119, 119, 119);
   flex-grow: 1;
   padding-top: 20px;
+  border-radius: 10px;
 }
-.update-music-btn {
-    padding: 10px 15px 10px 15px;
-    float: right;
+.normal-btn {
+  padding: 10px 15px 10px 15px;
+  float: right;
+  margin-left: 10px;
+  background-color: cornflowerblue;
+  border: none;
+  border-radius: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+}
+.normal-btn:hover {
+  background-color: rgb(118, 161, 240);
+  cursor: pointer;
+}
+
+.f-left {
+  float: left;
+}
+.flex-right {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.delete-btn {
+  background-color: rgb(243, 107, 107);
+}
+
+.delete-btn:hover {
+  background-color: rgb(247, 89, 89);
+}
+
+.block-btn {
+  background-color: rgb(238, 162, 99);
+}
+
+.block-btn:hover {
+  background-color: rgb(233, 180, 130);
+}
+
+/* --------------------------------------------------- */
+.admin-page-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.admin-page-nav > a {
+  height: 100%;
+  padding: 0 20px 0 20px;
+  font-size: 20px;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+}
+
+.admin-page-nav > a:hover {
+  background-color: #6b6b6b;
+  color: white;
 }
