--- a/css/home.css
+++ b/css/home.css
@@ -96,7 +96,7 @@ body {
   width: 450px;
   background-color: #170f23;
   top: 60px;
-} 
+}
 
 .search-result-box > .playlist-item {
   cursor: auto !important;
@@ -138,9 +138,14 @@ body {
 
 .album-box {
   width: 250px;
-  overflow: hidden;
   margin-right: 20px;
+  cursor: pointer;
 }
+
+.album-box:hover > img {
+  box-shadow: 0 0 15px 3px #ffffffa6;
+}
+
 .album-box > img {
   width: 100%;
   aspect-ratio: 1/1;
@@ -215,10 +220,16 @@ body {
   text-overflow: ellipsis;
   font-weight: bold;
 }
-.music-author,
-.time-upload {
-  margin: 3px 0 3px 0;
+.music-author {
+  margin: 4px 0 3px 0;
   font-size: 14px;
+  color: rgba(255, 255, 255, 0.521);
+}
+
+.time-upload {
+  margin: 10px 0 3px 0;
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.521);
 }
 
 .new-music-title {
@@ -318,13 +329,58 @@ body {
 }
 
 input[type="range"] {
-  background-color: white;
-  accent-color: rgb(169, 25, 182);
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: rgba(128, 128, 128, 0.521);
+  height: 10px;
 }
 
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
-  clip-path: polygon(0 0, 0 0, 0 0);
+  appearance: none;
+  width: 10px;
+  height: 10px;
+  background-color: rgb(223, 119, 255);
+  transition: 0.1s;
+}
+
+input[type="range"]::-moz-range-thumb {
+  width: 10px;
+  height: 10px;
+  background-color: rgb(223, 119, 255);
+  transition: 0.1s;
+}
+
+input[type="range"]::-webkit-slider-thumb:hover {
+  width: 18px;
+  height: 18px;
+}
+input[type="range"]::-moz-range-thumb:hover {
+  width: 18px;
+  height: 18px;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+  background: linear-gradient(
+    to right,
+    rgba(173, 134, 189, 0.733) 0%,
+    rgba(214, 45, 248, 0.904) calc(var(--value) * 1%),
+    rgba(128, 128, 128, 0.521) calc(var(--value) * 1%),
+    rgba(128, 128, 128, 0.521) 100%
+  );
+  border-radius: 3px;
+}
+
+input[type="range"]::-moz-range-track {
+  background: linear-gradient(
+    to right,
+    rgba(173, 134, 189, 0.733) 0%,
+    rgba(214, 45, 248, 0.904) calc(var(--value) * 1%),
+    rgba(128, 128, 128, 0.521) calc(var(--value) * 1%),
+    rgba(128, 128, 128, 0.521) 100%
+  );
+  border-radius: 3px;
 }
 
 .music-time-p {
@@ -349,7 +405,9 @@ input[type="range"]::-webkit-slider-thumb {
   padding: 20px 0 20px 0;
   margin: 0 3% 0 3%;
   border-radius: 10px;
+  position: relative;
 }
+
 .top-table {
   width: 60%;
   margin-right: 5%;
