--- a/css/admin.css
+++ b/css/admin.css
@@ -39,6 +39,7 @@ h2 {
   display: flex;
   flex-direction: row;
   position: relative;
+  overflow: hidden;
 }
 
 .add-new-music {
@@ -82,14 +83,13 @@ form {
   flex-direction: row;
 }
 
-#search-user-input { 
+#search-user-input {
   padding-left: 10px;
 }
 
 #search-user-input {
   margin-right: 10px;
 }
-
 
 table {
   width: 100%;
@@ -138,13 +138,42 @@ td {
 }
 
 /* ------------------------------------------- */
-.music-update-box {
-  margin-left: 20px;
-  border: 1px solid rgb(119, 119, 119);
+.music-box {
   flex-grow: 1;
-  padding-top: 20px;
+  padding: 20px 0 20px 0;
   border-radius: 10px;
 }
+
+.show-music-table-container {
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.show-music-table-container > thead > tr > th {
+  text-align: left;
+  font-size: 18px;
+  padding-left: 10px;
+}
+
+.show-music-table-container > tbody > tr:nth-child(even) {
+  background-color: #ebebebb0;
+}
+
+.show-music-table-container > tbody > tr > td {
+  padding-left: 10px;
+}
+
+.more-info-btn {
+  font-size: 12px !important;
+  margin: 0 !important;
+  opacity: 0.7;
+}
+
+.more-info-btn:hover {
+  opacity: 1;
+}
+
+/* ----------------------------------------- */
 .normal-btn {
   padding: 10px 15px 10px 15px;
   float: right;
