--- a/css/home.css
+++ b/css/home.css
@@ -835,3 +835,60 @@ input[type="range"]::-moz-range-track {
   float: right;
   margin-left: 15px;
 }
+
+/* ---------------------------------------------------------- */
+.nothing-text {
+  width: 100%;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.521);
+  margin: 100px 0 20px 0;
+  font-size: 25px;
+}
+
+.nothing-text-h3 {
+  width: 100%;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.521);
+}
+
+.sl-left-eff-btn {
+  border: 3px solid #924ac2;
+  padding: 7px 12px 7px 12px;
+  font-size: 19px;
+  color: white;
+  font-weight: bold;
+  position: relative;
+  background-color: inherit;
+  cursor: pointer;
+  margin: 10px;
+}
+.sl-left-eff-btn::before {
+  content: "Login Now";
+  position: relative;
+  z-index: 2;
+}
+.signup-btn-nt::before {
+  content: "Register Now";
+}
+
+.sl-left-eff-btn::after {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 0;
+  background-color: #924ac2;
+  top: 0;
+  left: 0;
+  transition: 0.2s;
+}
+.sl-left-eff-btn:hover::after {
+  width: 100%;
+}
+
+.center-box-btn {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 25px;
+}
