--- a/components/home_normal_component.html
+++ b/components/home_normal_component.html
@@ -99,10 +99,9 @@
           row[4],
           row[1],
           row[3],
-          index,
-          nameArray,
           libraryIDList.indexOf(row[0]) == -1 ? "none" : "#ba63d4",
-          row[0]
+          row[0],
+          row
         );
       });
       $(".category-show-item").html(musicByTagComponent);
