--- a/css/home.css
+++ b/css/home.css
@@ -547,19 +547,7 @@ input[type="range"]::-moz-range-track {
 .music-volume-control > p {
   color: white;
 }
-
 /* ------------------------------- */
-.aside-left {
-  height: 100vh;
-  width: 15%;
-
-  background-color: #231b2e;
-  position: relative;
-  top: 0;
-  left: 0;
-  border-right: 1px solid rgb(41, 41, 41);
-  float: left;
-}
 .aside-right {
   height: calc(100vh - 90px);
   width: 18%;
@@ -575,6 +563,42 @@ input[type="range"]::-moz-range-track {
   padding-bottom: 10px;
   float: right;
 }
+.app-logo-aside {
+  width: 100%;
+  height: 60px;
+
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid #9c9c9c93;
+}
+.app-logo-aside > img {
+  height: 80%;
+  aspect-ratio: 1/1;
+  border-radius: 8px;
+  border: 1px solid #924ac2;
+}
+.app-logo-aside > p {
+  color: rgb(247, 214, 255);
+  font-size: 23px;
+  margin-left: 10px;
+}
+
+/* ------------------------------- */
+.aside-left {
+  height: 100vh;
+  width: 15%;
+
+  background-color: #231b2e;
+  position: relative;
+  top: 0;
+  left: 0;
+  border-right: 1px solid rgb(41, 41, 41);
+  float: left;
+}
+
 .playlists-title {
   color: white;
   width: 90%;
