--- a/components/home_albums_component.html
+++ b/components/home_albums_component.html
@@ -1,11 +1,7 @@
 <body>
   <section class="albums-session">
     <div class="albums-info-container">
-      <img
-        src="music/img/moon-halo-honkai.jpg"
-        alt="no-img"
-        id="album-img-info"
-      />
+      <img src="assets/img/default.jpg" alt="no-img" id="album-img-info" />
       <p id="album-name-p">Moon Halo Honkai Impact 3rd</p>
       <p id="album-author-p">MiHoYo - Honkai Impact 3rd</p>
       <button class="album-play-btn" onclick="playAlbumChecked()">Play</button>
@@ -60,30 +56,30 @@
     }
 
     function renderInfoAlbum(info) {
-      console.log(info);
-
-      $("#album-img-info").attr("src", info[4]);
-      $("#album-name-p").text(info[1]);
-      $("#album-author-p").text(info[2]);
+      $("#album-img-info").attr("src", info.albumImgPath);
+      $("#album-name-p").text(info.albumName);
+      if (myAlbum) $("#album-author-p").text("Date " + info.createAt);
+      else $("#album-author-p").text(info.author);
     }
 
     function loadAlbumItems(list) {
       var htmlComponent = "";
 
-      list.forEach((row, index) => {
-        htmlComponent += `
+      if (!list.length == 0)
+        list.forEach((row, index) => {
+          htmlComponent += `
           <div class="al-sh-items-box">
             <input type="checkbox" name="check-to-play-music-${
-              row[0]
+              row.imgPath
             }" id="check-to-play-music-${
-          row[0]
-        }" onchange='addToAlbumsChecked(${JSON.stringify(row)})'>
-            <label for="check-to-play-music-${row[0]}"></label>
-            <img src="${checkImg(row[4])}" alt="no-img" />
+            row.id
+          }" onchange='addToAlbumsChecked(${JSON.stringify(row)})'>
+            <label for="check-to-play-music-${row.id}"></label>
+            <img src="${checkImg(row.imgPath)}" alt="no-img" />
             <span>
               <span class="item-info-name">
-                <p>${row[1]}</p>
-                <p>${row[3]}</p>
+                <p>${row.musicName}</p>
+                <p>${row.author}</p>
               </span>
 
               <button class="add-playlist-al-btn" onclick='addToPlaylist(${JSON.stringify(
@@ -92,35 +88,49 @@
                 <svg width="24px" height="24px" viewBox="0 0 24 24" fill="none">
                   <path opacity="0.5" d="M2 12C2 7.28595 2 4.92893 3.46447 3.46447C4.92893 2 7.28595 2 12 2C16.714 2 19.0711 2 20.5355 3.46447C22 4.92893 22 7.28595 22 12C22 16.714 22 19.0711 20.5355 20.5355C19.0711 22 16.714 22 12 22C7.28595 22 4.92893 22 3.46447 20.5355C2 19.0711 2 16.714 2 12Z" stroke="white" stroke-width="1.5"/>
                   <path d="M15 12L12 12M12 12L9 12M12 12L12 9M12 12L12 15" stroke="white" stroke-width="1.5" stroke-linecap="round"/>
-                </svg>  
+                </svg>
               </button>
 
-              <p>${secToMinutes(row[9])}</p>
+              <p>${secToMinutes(row.duration)}</p>
             </span>
           </div>
         `;
-      });
+        });
+      else
+        htmlComponent = `
+        <h1 class="nothing-text">Hmm... Nothing to see here</h1>
+
+      `;
+
       $("#al-child-contain").html(htmlComponent);
     }
 
     $("document").ready(() => {
-      var albumID = onloadData.albumsLoad[albumIndex][0];
+      if (!myAlbum) {
+        var albumsData = onloadData.albumsLoad;
+        var albumID = albumsData[albumIndex].albumID;
+      } else {
+        var albumsData = onloadData.userAlbumsList;
+        var albumID = albumsData[albumIndex].id;
+      }
+
       $.ajax({
         url: "server/server.php",
         type: "POST",
         data: {
           requestCode: 5,
           albumID,
+          myAlbum,
         },
         success: (response) => {
+          console.log(response);
           if (response) {
-            onloadAlbumsList = JSON.parse(response.replace("<!-- Server -->", ""));
-
+            onloadAlbumsList = JSON.parse(
+              response.replace("<!-- Server -->", "")
+            );
             loadAlbumItems([...onloadAlbumsList]);
-
-            console.log()
-            if (onloadData.albumsLoad[albumIndex]) {
-              renderInfoAlbum(onloadData.albumsLoad[albumIndex]);
+            if (albumsData[albumIndex]) {
+              renderInfoAlbum(albumsData[albumIndex]);
             }
           }
         },
