--- a/css/home.css
+++ b/css/home.css
@@ -548,21 +548,20 @@ input[type="range"]::-moz-range-track {
   color: white;
 }
 /* ------------------------------- */
-.aside-right {
+.aside-left {
   height: calc(100vh - 90px);
-  width: 18%;
+  width: 15%;
 
+  display: flex;
+  flex-direction: column;
   background-color: #231b2e;
   position: relative;
   top: 0;
-  right: 0;
-  border-left: 1px solid rgb(41, 41, 41);
-  display: flex;
-  flex-direction: column;
-  color: white;
-  padding-bottom: 10px;
-  float: right;
+  left: 0;
+  border-right: 1px solid rgb(41, 41, 41);
+  float: left;
 }
+
 .app-logo-aside {
   width: 100%;
   height: 60px;
@@ -585,18 +584,87 @@ input[type="range"]::-moz-range-track {
   font-size: 23px;
   margin-left: 10px;
 }
+.my-album-container {
+  width: 100%;
+  position: relative;
+  flex-grow: 1;
+}
 
+.my-album-container > p {
+  color: rgba(255, 255, 255, 0.726);
+  width: 90%;
+  margin: 10px 0 10px 5%;
+  font-size: 18px;
+  border-left: 5px solid #924ac2;
+  padding-left: 5px;
+}
+
+.my-album-container > div {
+  width: 90%;
+  height: 200px;
+  margin-left: 5%;
+}
+
+.aside-left-album-item-box {
+  height: 40px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  font-size: 18px;
+  color: white;
+  align-items: center;
+  padding-left: 15px;
+}
+
+.aside-left-album-item-box:hover {
+  background-color: #724391;
+  cursor: pointer;
+}
+.aside-left-album-item-box > p {
+  flex-grow: 1;
+}
+
+.aside-left-album-item-box > svg {
+  margin-right: 5px;
+  opacity: 0;
+}
+.aside-left-album-item-box:hover > svg {
+  opacity: 1;
+}
+
+.aside-create-new-album-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: white;
+  font-size: 18px;
+  width: 100%;
+  height: 40px !important;
+  padding-left: 15px;
+  padding-right: 5px;
+  cursor: pointer;
+}
+.aside-create-new-album-container > p {
+  flex-grow: 1;
+}
+.aside-create-new-album-container:hover {
+  background-color: #724391;
+}
 /* ------------------------------- */
-.aside-left {
-  height: 100vh;
-  width: 15%;
+.aside-right {
+  height: calc(100vh - 90px);
+  width: 18%;
 
   background-color: #231b2e;
   position: relative;
   top: 0;
-  left: 0;
-  border-right: 1px solid rgb(41, 41, 41);
-  float: left;
+  right: 0;
+  border-left: 1px solid rgb(41, 41, 41);
+  display: flex;
+  flex-direction: column;
+  color: white;
+  padding-bottom: 10px;
+  float: right;
 }
 
 .playlists-title {
@@ -915,4 +983,54 @@ input[type="range"]::-moz-range-track {
   flex-direction: row;
   justify-content: center;
   margin-top: 25px;
+}
+
+/* -------------------------------------------------- */
+.floating-div-container {
+  height: 100%;
+  width: 100%;
+
+  background-color: rgba(173, 173, 173, 0.507);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 11;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.create-new-my-album-floating-box {
+  height: 500px;
+  width: 350px;
+
+  background-color: #724391;
+}
+
+.create-new-my-album-form {
+  margin-left: 5%;
+  width: 90%;
+}
+
+.create-new-my-album-form > input {
+  width: 75%;
+  height: 25px;
+  border: none;
+
+  border-bottom: 1px solid #724391;
+  outline: none;
+  background-color: inherit;
+  color: white;
+  font-size: 17px;
+}
+.create-new-my-album-form > button {
+  height: 25px;
+  padding: 0 5px 0 5px;
+  border: 1px solid #724391;
+  background-color: inherit;
+  color: white;
+  cursor: pointer;
+  width: 20%;
+}
+.create-new-my-album-form > button:hover {
+  background-color: #724391;
 }
