--- a/components/home_albums_component.html
+++ b/components/home_albums_component.html
@@ -1,7 +1,7 @@
 <body>
   <section class="albums-session">
     <div class="albums-info-container">
-      <img src="assets/img/default.jpg" alt="no-img" id="album-img-info" />
+      <img alt="no-img" id="album-img-info" />
       <p id="album-name-p">Moon Halo Honkai Impact 3rd</p>
       <p id="album-author-p">MiHoYo - Honkai Impact 3rd</p>
       <button class="album-play-btn" onclick="playAlbumChecked()">Play</button>
@@ -82,13 +82,22 @@
                 <p>${row.author}</p>
               </span>
 
-              <button class="add-playlist-al-btn" onclick='addToPlaylist(${JSON.stringify(
+              <button class="al-btn-svg" onclick='addToPlaylist(${JSON.stringify(
                 row
               )})'>
                 <svg width="24px" height="24px" viewBox="0 0 24 24" fill="none">
                   <path opacity="0.5" d="M2 12C2 7.28595 2 4.92893 3.46447 3.46447C4.92893 2 7.28595 2 12 2C16.714 2 19.0711 2 20.5355 3.46447C22 4.92893 22 7.28595 22 12C22 16.714 22 19.0711 20.5355 20.5355C19.0711 22 16.714 22 12 22C7.28595 22 4.92893 22 3.46447 20.5355C2 19.0711 2 16.714 2 12Z" stroke="white" stroke-width="1.5"/>
                   <path d="M15 12L12 12M12 12L9 12M12 12L12 9M12 12L12 15" stroke="white" stroke-width="1.5" stroke-linecap="round"/>
                 </svg>
+              </button>
+              <button class="al-btn-svg al-btn-svg-delete" onclick='addToPlaylist(${JSON.stringify(
+                row
+              )})'>
+              <svg width="26px" height="26px" viewBox="0 0 1024 1024" fill="#000000">
+                  <path d="M512 897.6c-108 0-209.6-42.4-285.6-118.4-76-76-118.4-177.6-118.4-285.6 0-108 42.4-209.6 118.4-285.6 76-76 177.6-118.4 285.6-118.4 108 0 209.6 42.4 285.6 118.4 157.6 157.6 157.6 413.6 0 571.2-76 76-177.6 118.4-285.6 118.4z m0-760c-95.2 0-184.8 36.8-252 104-67.2 67.2-104 156.8-104 252s36.8 184.8 104 252c67.2 67.2 156.8 104 252 104 95.2 0 184.8-36.8 252-104 139.2-139.2 139.2-364.8 0-504-67.2-67.2-156.8-104-252-104z" fill="white" />
+                  <path d="M707.872 329.392L348.096 689.16l-31.68-31.68 359.776-359.768z" fill="white" />
+                  <path d="M328 340.8l32-31.2 348 348-32 32z" fill="white" />
+              </svg>
               </button>
 
               <p>${secToMinutes(row.duration)}</p>
@@ -123,7 +132,6 @@
           myAlbum,
         },
         success: (response) => {
-          console.log(response);
           if (response) {
             onloadAlbumsList = JSON.parse(
               response.replace("<!-- Server -->", "")
