--- a/css/albumsPage.css
+++ b/css/albumsPage.css
@@ -20,11 +20,17 @@
   flex-direction: column;
   align-items: center;
 }
-.albums-info-container > img {
+#album-img-info {
   width: 100%;
   aspect-ratio: 1/1;
   border-radius: 10px;
+  opacity: 0;
+  transition: 0.3s;
 }
+#album-img-info[src] {
+  opacity: 1;
+}
+
 .albums-info-container > p {
   color: white;
   font-size: 20px;
@@ -53,7 +59,6 @@
   border: none;
   cursor: pointer;
 }
-
 
 /* --------------------------------------- */
 .albums-show-items-container {
@@ -94,7 +99,7 @@ input[type="checkbox"] + label::before {
   width: 15px;
   height: 15px;
   border: 1px solid #ffb0fb38;
-  background-color: #231b2e; 
+  background-color: #231b2e;
   margin: 10px;
   vertical-align: middle;
 }
@@ -103,7 +108,6 @@ input[type="checkbox"]:checked + label::before {
   background-color: white;
   border-radius: 2px;
 }
-
 
 .al-sh-items-box > img {
   height: 65%;
@@ -119,6 +123,16 @@ input[type="checkbox"]:checked + label::before {
   font-weight: bold;
   align-items: center;
 }
+
+.al-sh-items-box > span > .item-info-name {
+  width: 75%;
+}
+.al-sh-items-box > span > .item-info-name p:nth-child(1) {
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .al-sh-items-box > span > .item-info-name p:nth-child(2) {
   color: rgba(255, 255, 255, 0.308);
   font-weight: normal;
@@ -126,17 +140,22 @@ input[type="checkbox"]:checked + label::before {
   margin-top: 10px;
 }
 
-.add-playlist-al-btn {
+.al-btn-svg {
   padding: 0 !important;
   background-color: transparent;
   border: none;
   cursor: pointer;
   position: absolute;
-  right: 80px;
+  right: 120px;
   opacity: 0;
 }
-.al-sh-items-box:hover .add-playlist-al-btn {
+
+.al-btn-svg-delete {
+  right: 80px;
+}
+
+.al-sh-items-box:hover .al-btn-svg {
   opacity: 1;
-} 
+}
 
 /* -------------------------------------- */
