--- a/css/home.css
+++ b/css/home.css
@@ -589,6 +589,9 @@ input[type="range"]::-moz-range-track {
   width: 100%;
   position: relative;
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 10px;
 }
 
 .my-album-container > p {
@@ -600,12 +603,13 @@ input[type="range"]::-moz-range-track {
   padding-left: 5px;
 }
 
-.my-album-container > div {
+.my-album-container > .my-albums-show-container {
   width: 90%;
-  height: 200px;
   margin-left: 5%;
+  margin-bottom: 20px;
 }
 
+/* ---------------------------------- */
 .aside-left-album-item-box {
   height: 40px;
   width: 100%;
