--- a/components/home_albums_component.html
+++ b/components/home_albums_component.html
@@ -23,6 +23,14 @@
     var albumsChecked = [];
     var onloadAlbumsList = [];
 
+    if (!myAlbum) {
+      var albumsData = onloadData.albumsLoad;
+      var albumID = albumsData[albumIndex].albumID;
+    } else {
+      var albumsData = onloadData.userAlbumsList;
+      var albumID = albumsData[albumIndex].id;
+    }
+
     function addToAlbumsChecked(music) {
       const exist = albumsChecked.some(
         (child) => JSON.stringify(child) === JSON.stringify(music)
@@ -90,15 +98,20 @@
                   <path d="M15 12L12 12M12 12L9 12M12 12L12 9M12 12L12 15" stroke="white" stroke-width="1.5" stroke-linecap="round"/>
                 </svg>
               </button>
-              <button class="al-btn-svg al-btn-svg-delete" onclick='addToPlaylist(${JSON.stringify(
-                row
-              )})'>
-              <svg width="26px" height="26px" viewBox="0 0 1024 1024" fill="#000000">
-                  <path d="M512 897.6c-108 0-209.6-42.4-285.6-118.4-76-76-118.4-177.6-118.4-285.6 0-108 42.4-209.6 118.4-285.6 76-76 177.6-118.4 285.6-118.4 108 0 209.6 42.4 285.6 118.4 157.6 157.6 157.6 413.6 0 571.2-76 76-177.6 118.4-285.6 118.4z m0-760c-95.2 0-184.8 36.8-252 104-67.2 67.2-104 156.8-104 252s36.8 184.8 104 252c67.2 67.2 156.8 104 252 104 95.2 0 184.8-36.8 252-104 139.2-139.2 139.2-364.8 0-504-67.2-67.2-156.8-104-252-104z" fill="white" />
-                  <path d="M707.872 329.392L348.096 689.16l-31.68-31.68 359.776-359.768z" fill="white" />
-                  <path d="M328 340.8l32-31.2 348 348-32 32z" fill="white" />
-              </svg>
-              </button>
+
+              ${
+                myAlbum
+                  ? `
+                  <button class="al-btn-svg al-btn-svg-delete" onclick='deleteFromMyAlbum(${row.id})'>
+                    <svg width="26px" height="26px" viewBox="0 0 1024 1024" fill="#000000">
+                        <path d="M512 897.6c-108 0-209.6-42.4-285.6-118.4-76-76-118.4-177.6-118.4-285.6 0-108 42.4-209.6 118.4-285.6 76-76 177.6-118.4 285.6-118.4 108 0 209.6 42.4 285.6 118.4 157.6 157.6 157.6 413.6 0 571.2-76 76-177.6 118.4-285.6 118.4z m0-760c-95.2 0-184.8 36.8-252 104-67.2 67.2-104 156.8-104 252s36.8 184.8 104 252c67.2 67.2 156.8 104 252 104 95.2 0 184.8-36.8 252-104 139.2-139.2 139.2-364.8 0-504-67.2-67.2-156.8-104-252-104z" fill="white" />
+                        <path d="M707.872 329.392L348.096 689.16l-31.68-31.68 359.776-359.768z" fill="white" />
+                        <path d="M328 340.8l32-31.2 348 348-32 32z" fill="white" />
+                    </svg>
+                  </button>
+                  `
+                  : ""
+              }
 
               <p>${secToMinutes(row.duration)}</p>
             </span>
@@ -115,14 +128,6 @@
     }
 
     $("document").ready(() => {
-      if (!myAlbum) {
-        var albumsData = onloadData.albumsLoad;
-        var albumID = albumsData[albumIndex].albumID;
-      } else {
-        var albumsData = onloadData.userAlbumsList;
-        var albumID = albumsData[albumIndex].id;
-      }
-
       $.ajax({
         url: "server/server.php",
         type: "POST",
@@ -147,5 +152,26 @@
         },
       });
     });
+
+    function deleteFromMyAlbum(musicID) {
+      $.ajax({
+        url: "server/server.php",
+        type: "POST",
+        data: {
+          requestCode: 8,
+          musicID,
+          albumID,
+        },
+        success: (response) => {
+          const res = JSON.parse(response);
+          if (res.status) {
+            loadAlbumItems(res.newList);
+          }
+        },
+        error: (status, error) => {
+          console.error(status, error);
+        },
+      });
+    }
   </script>
 </body>
