--- a/css/moreInfo.css
+++ b/css/moreInfo.css
@@ -10,6 +10,11 @@ body {
   align-items: center;
 }
 
+.main-session {
+  display: flex;
+  flex-direction: row;
+}
+
 .update-input {
   width: 100%;
   height: 30px;
@@ -58,6 +63,16 @@ nav > a:hover {
 
 section {
   position: relative;
+}
+
+.note-info {
+  border: 1px solid black;
+  width: 300px;
+  height: 500px;
+  position: relative;
+  top: 30px;
+  margin-left: 15px;
+  border-radius: 10px;
 }
 
 .dis-none {
