--- a/css/albumsPage.css
+++ b/css/albumsPage.css
@@ -19,6 +19,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
 }
 #album-img-info {
   width: 100%;
@@ -32,6 +33,7 @@
 }
 
 .albums-info-container > p {
+  max-width: 60%;
   color: white;
   font-size: 20px;
   text-align: center;
@@ -118,14 +120,13 @@ input[type="checkbox"]:checked + label::before {
   flex-grow: 1;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   color: white;
   font-weight: bold;
   align-items: center;
 }
 
 .al-sh-items-box > span > .item-info-name {
-  width: 75%;
+  width: 73%;
 }
 .al-sh-items-box > span > .item-info-name p:nth-child(1) {
   width: 100%;
@@ -138,6 +139,11 @@ input[type="checkbox"]:checked + label::before {
   font-weight: normal;
   font-size: 14px;
   margin-top: 10px;
+}
+
+.music-album-duration {
+  position: absolute;
+  right: 10px;
 }
 
 .al-btn-svg {
